force-app/main/default/objects/Integration_Visit__c/Integration_Visit__c.object-meta.xml
<CustomObject>
    <label>Integration Visit</label>
    <nameField>
        <displayFormat>IV-{00000000}</displayFormat>
        <label>Integration Visits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration_Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>