force-app/main/default/objects/Integration_Visit__c/fields/IsDeletedInSDH__c.field-meta.xml
<CustomField>
    <fullName>IsDeletedInSDH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDeletedInSDH</label>
    <type>Checkbox</type>
</CustomField>