force-app/main/default/objects/Integration_Visit__c/fields/MD5_Hash__c.field-meta.xml
<CustomField>
    <fullName>MD5_Hash__c</fullName>
    <label>MD5 Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>