force-app/main/default/objects/Integration_Visit__c/fields/Processed_MD5__c.field-meta.xml
<CustomField>
    <fullName>Processed_MD5__c</fullName>
    <label>Processed MD5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>