force-app/main/default/objects/Integration_Visit__c/fields/USUBJID__c.field-meta.xml
<CustomField>
    <fullName>USUBJID__c</fullName>
    <label>USUBJID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>