force-app/main/default/objects/Integration_Visit__c/fields/VISITNUM__c.field-meta.xml
<CustomField>
    <fullName>VISITNUM__c</fullName>
    <label>VISITNUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>